--- a/html_almuerzo.html
+++ b/html_almuerzo.html
@@ -17,6 +17,7 @@
 
 
 <body>
+    <script src="validacion_formulario.js"></script>
     <div class="container">
 
         <header class="Header">
@@ -261,6 +262,7 @@
 
                     <input type="submit" value="Enviar">
                 </form>
+                <script src="validacion_formulario.js"></script>
 
                 <h2>
                     ¡Evalúanos!
