se agrego la validaciòn del script

--- a/html_desayuno.html
+++ b/html_desayuno.html
@@ -16,6 +16,7 @@
 
 
 <body>
+    <script src="validacion_formulario.js"></script>
     <div class="container">
 
         <header class="Header">
@@ -212,6 +213,7 @@
 
                 <input type="submit" value="Enviar">
             </form>
+            <script src="validacion_formulario.js"></script>
 
             <h2>
                 ¡Evalúanos!
