--- a/html_merienda.html
+++ b/html_merienda.html
@@ -8,7 +8,7 @@
     <title>Desayunos saludables.</title>
     <link rel="stylesheet" href="Css/CssGrid.css">
     <link rel="stylesheet" href="Css/style.css">
-    <link rel="stylesheet" href="Css/Css_desayuno.css">
+    <link rel="stylesheet" href="Css/Css_merienda.css">
 </head>
 
 
@@ -144,12 +144,12 @@
                     <h3 id="Pudín de Chía">Pudín de Chía</h3>
                     <ul>
                         <h3>Ingredientes:</h3>
-                        <li>1/4 taza semilla chia</li>
                         <li>1 taza leche almendra (o la de tu preferencia)</li>
                         <li>1 cda miel de abeja</li>
                         <li>Pizca de canela</li>
                         <li>Pizca de sal de mar</li>
                         <li>Toppings: cualquier fruta que tu quieras</li>
+                        <li>1/4 taza semilla chia</li>
 
                     </ul>
 
