merienda, html y css

--- a/html_merienda.html
+++ b/html_merienda.html
@@ -36,10 +36,10 @@
             <div class="carousel">
 
                 <ul>
-                    <li><img src="Imagenes_desayuno/slider1.jpg" alt="Sandwich de Huevo"></li>
-                    <li><img src="Imagenes_desayuno/slider2.jpg" alt="Wrap Dulce"></li>
-                    <li><img src="Imagenes_desayuno/slider3.jpg" alt="Pancakes de Plátano"></li>
-                    <li><img src="Imagenes_desayuno/slider4.jpg" alt="Pudín de Chía"></li>
+                    <li><img src="Imagenes_merienda/limon.jpg" alt="Menta con Limón"></li>
+                    <li><img src="Imagenes_merienda/fresa.jpg" alt="Jengibre con Fresa"></li>
+                    <li><img src="Imagenes_merienda/curcuma.jpg" alt="Cúrcuma con Jengibre"></li>
+                    <li><img src="Imagenes_merienda/verde.jpg" alt="Té verde con Menta"></li>
 
                 </ul>
 
@@ -50,28 +50,76 @@
             <div class="recetas">
                 <div class="receta">
                     <!-- UNA RECETA!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-                    <h3 id="Sandwich de Huevo.">Sandwich de Huevo.</h3>
+                    <h3 id="Menta con Limón.">Menta con Limón.</h3>
                     <ul>
                         <h3>Ingredientes:</h3>
-                        <li>1 muffin inglés</li>
-                        <li>4 huevos</li>
-                        <li>2 cdas leche vegetal (o la de tu preferencia)</li>
-                        <li>2 cdtas mostaza</li>
-                        <li>Perejil fresco (al gusto)</li>
-                        <li>Sal de mar (al gusto)</li>
-                        <li>1 cda mantequilla</li>
-                        <li>Opcional: tomate, espinaca, aguacate</li>
+                    <li>2 bolsas de té de menta</li>
+                    <li>1 cucharadita de miel de abeja</li>
+                    <li>Rodajas de limón</li>
+                    <li>Menta fresca</li>
+                    <li>Hielo</li>
+                    <li>Agua</li>    
                     </ul>
 
                     <ol>
                         <h3>Modo de preparación:</h3>
-                        <li>En un tazón poner los huevos, la leche, la mostaza, el perejil y la sal. Revolver muy bien.
-                        </li>
-                        <li>En un sartén colocar la mantequilla, esperar a que se derrita un poco y verter la mezcla del
-                            huevo.</li>
-                        <li>Cocinar a fuego medio bajo por unos 7 minutos.</li>
-                        <li>Cortar la tortilla de huevo en triángulos.</li>
-                        <li>Esparcir un poco de mantequilla en el muffin y colocar el huevo dentro del sandwich.</li>
+                        <li>En agua caliente sumerge dos bolsas de té de menta y deja reposar por 5 minutos.</li>
+                        <li>Agrega la miel de abeja y revuelve muy bien.</li>
+                        <li>En un vaso de vidrio con hielo agrega el jugo de limón, el tea de menta, las rodajas de limon y la menta fresca.</li>
+                    </ol>
+
+
+
+                </div>
+                <br>
+                    <a href="#indice_de_recetas">Volver al Inicio.</a><br>
+
+                <div class="receta">
+                    <!-- UNA RECETA!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+                    <h3 id="Jengibre con Fresa">Jengibre con Fresa</h3>
+                    <ul>
+                        <h3>Ingredientes:</h3>
+                        <li>1/4 taza de jengibre fresco picado</li>
+                        <li>Jugo de 1 limón</li>
+                        <li>5 fresas picadas</li>
+                        <li>Stevia (para endulzar)</li>
+                        <li>Agua</li>
+                        <li>Hielo</li>
+
+                    </ul>
+
+                    <ol>
+                        <h3>Modo de preparación:</h3>
+ <li>En agua caliente sumerge el jengibre fresco y deja reposar por 10 minutos.</li>
+ <li>En un vaso de vidrio con hielo agrega el jugo de limón, el agua con jengibre, la fresa y endulza con stevia.</li>
+                    
+                    </ol>
+
+
+
+                </div>
+                <br>
+                    <a href="#indice_de_recetas">Volver al Inicio.</a><br>
+
+                <div class="receta">
+                    <!-- UNA RECETA!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+                    <h3 id="Cúrcuma con Jengibre">Cúrcuma con Jengibre</h3>
+                    <ul>
+                        <h3>Ingredientes:</h3>
+                        <li>1/4 taza de cúrcuma fresca picada</li>
+                        <li>1/4 taza de jengibre fresco picado</li>
+                        <li>Jugo de 1 limón</li>
+                        <li>Stevia (para endulzar)</li>
+                        <li>Polvo de cayena (opcional)</li>
+                        <li>Agua</li>
+                        <li>Hielo</li>
+
+                    </ul>
+
+                    <ol>
+                        <h3>Modo de preparación:</h3>
+                       <li>En agua caliente sumerge el jengibre fresco y la cúrcuma, deja reposar por 10 minutos.</li>
+                       <li>En un vaso de vidrio con hielo agrega el jugo de limón, el agua con jengibre y cúrcuma y espolvorea cayenne.</li>
 
                     </ol>
 
@@ -83,82 +131,24 @@
 
                 <div class="receta">
                     <!-- UNA RECETA!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-                    <h3 id="Wrap Dulce">Wrap Dulce</h3>
+                    <h3 id="Té verde con Menta">Té verde con Menta</h3>
                     <ul>
                         <h3>Ingredientes:</h3>
-                        <li>1 tortilla integral</li>
-                        <li>2 cdas mantequilla de almendra</li>
-                        <li>1/2 plátano</li>
-                        <li>3 fresas</li>
-                        <li>Pizca de canela</li>
-                        <li>Pizca de sal de mar</li>
+                         <li>1 bolsa de té verde</li>
+                         <li>1 bolsa de té de menta</li>
+                         <li>1 cucharadita de miel de abeja</li>
+                         <li>1/4 taza de piña fresca picada</li>
+                         <li>Menta fresca</li>
+                         <li>Agua</li>
+                         <li>Hielo</li>
 
                     </ul>
 
                     <ol>
                         <h3>Modo de preparación:</h3>
-                        <li>Sobre la tortilla, esparcir la mantequilla de almendra y colocar las rodajas de fruta.</li>
-                        <li>Doblar como burrito.</li>
-                        <li>Disfrutar!</li>
-
-                    </ol>
-
-
-
-                </div>
-                <br>
-                    <a href="#indice_de_recetas">Volver al Inicio.</a><br>
-
-                <div class="receta">
-                    <!-- UNA RECETA!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-                    <h3 id="Pancakes de Plátano">Pancakes de Plátano</h3>
-                    <ul>
-                        <h3>Ingredientes:</h3>
-                        <li>1 plátano</li>
-                        <li>2 huevos</li>
-                        <li>Pizca de sal</li>
-                        <li>1 cda mantequilla</li>
-                        <li>Miel de maple, al gusto</li>
-                        <li>Pizca de canela</li>
-
-                    </ul>
-
-                    <ol>
-                        <h3>Modo de preparación:</h3>
-                        <li>Machacar el plátano y mezclar con el huevo y sal.</li>
-                        <li>En un sartén colocar la mantequilla, esperar a que se derrita un poco y verter la mezcla.
-                        </li>
-                        <li>Voltear cada pancake para que se cocine de los dos lados.</li>
-                        <li>Terminar con miel de maple y canela. </li>
-
-                    </ol>
-
-
-
-                </div>
-                <br>
-                    <a href="#indice_de_recetas">Volver al Inicio.</a><br>
-
-                <div class="receta">
-                    <!-- UNA RECETA!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-                    <h3 id="Pudín de Chía">Pudín de Chía</h3>
-                    <ul>
-                        <h3>Ingredientes:</h3>
-                        <li>1 taza leche almendra (o la de tu preferencia)</li>
-                        <li>1 cda miel de abeja</li>
-                        <li>Pizca de canela</li>
-                        <li>Pizca de sal de mar</li>
-                        <li>Toppings: cualquier fruta que tu quieras</li>
-                        <li>1/4 taza semilla chia</li>
-
-                    </ul>
-
-                    <ol>
-                        <h3>Modo de preparación:</h3>
-                        <li>En un recipiente colocar la leche, las semillas de chia, miel y la canela. Revolver muy
-                            bien.</li>
-                        <li>Meter al refrigerador y dejar reposar al menos 1 hora.</li>
-
+                        <li>En agua caliente sumerge las dos bolsas de té y deja reposar por 5 minutos.</li>
+                        <li>Agrega la miel de abeja y revuelve muy bien.</li>
+                        <li>En un vaso de vidrio con hielo agrega el té, la piña y las hojas de menta.</li>
                     </ol>
 
 
@@ -175,7 +165,7 @@
 
                 <h3 id="Video"> A continuación un vídeo explicativo para la preparación de las recetas.</h3>
 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/d-Yw97flmRA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/fCVTcAKvYlU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
 
 
@@ -191,10 +181,10 @@
         <aside>
             <!-- CAMBIAR LAS REF Y LOS NOMBRES!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
             <h2 id="indice_de_recetas">Lista de Recetas:</h2>
-            <a href="#Sandwich de Huevo">Ir a "Sandwich de Huevo"</a><br>
-            <a href="#Wrap Dulce">Ir a "Wrap Dulce"</a><br>
-            <a href="#Pancakes de Plátano">Ir a "Pancakes de Plátano"</a><br>
-            <a href="#Pudín de Chía">Ir a "Pudín de Chía"</a> <br>
+            <a href="#Menta con Limón">Ir a Menta con Limón</a><br>
+            <a href="#Jengibre con Fresa">Ir a Jengibre con Fresa</a><br>
+            <a href="#Cúrcuma con Jengibre">Ir a Cúrcuma con Jengibre</a><br>
+            <a href="#Té verde con Menta">Ir a Té verde con Menta</a> <br>
             <a href="#Video"> Video explicativo.</a> <br>
 
             <h2>
