cena, html y css.

--- a/html_cena.html
+++ b/html_cena.html
@@ -8,7 +8,7 @@
     <title>Desayunos saludables.</title>
     <link rel="stylesheet" href="Css/CssGrid.css">
     <link rel="stylesheet" href="Css/style.css">
-    <link rel="stylesheet" href="Css/Css_desayuno.css">
+    <link rel="stylesheet" href="Css/Css_cena.css">
 </head>
 
 
@@ -36,10 +36,10 @@
             <div class="carousel">
 
                 <ul>
-                    <li><img src="Imagenes_desayuno/slider1.jpg" alt="Sandwich de Huevo"></li>
-                    <li><img src="Imagenes_desayuno/slider2.jpg" alt="Wrap Dulce"></li>
-                    <li><img src="Imagenes_desayuno/slider3.jpg" alt="Pancakes de Plátano"></li>
-                    <li><img src="Imagenes_desayuno/slider4.jpg" alt="Pudín de Chía"></li>
+                    <li><img src="Imagenes_cena/Ensalada de Atún y Garbanzo.jpg" alt="Ensalada de Atún y Garbanzo"></li>
+                    <li><img src="Imagenes_cena/Licuado de Mora Azul.webp" alt="Licuado de Mora Azul"></li>
+                    <li><img src="Imagenes_cena/Pan Tostado con Tahini y Verduras.jpg" alt="Pan Tostado con Tahini y Verduras"></li>
+                    <li><img src="Imagenes_cena/Sándwich de Huevo con Aguacate.jpg" alt="Sándwich de Huevo con Aguacate"></li>
 
                 </ul>
 
@@ -50,28 +50,24 @@
             <div class="recetas">
                 <div class="receta">
                     <!-- UNA RECETA!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-                    <h3 id="Sandwich de Huevo.">Sandwich de Huevo.</h3>
+                    <h3 id="Ensalada de Atún y Garbanzo.">Ensalada de Atún y Garbanzo.</h3>
                     <ul>
                         <h3>Ingredientes:</h3>
-                        <li>1 muffin inglés</li>
-                        <li>4 huevos</li>
-                        <li>2 cdas leche vegetal (o la de tu preferencia)</li>
-                        <li>2 cdtas mostaza</li>
-                        <li>Perejil fresco (al gusto)</li>
-                        <li>Sal de mar (al gusto)</li>
-                        <li>1 cda mantequilla</li>
-                        <li>Opcional: tomate, espinaca, aguacate</li>
+                        <li>1 lata de atún.</li>
+                        <li>1 lata de garbanzos.</li>
+                        <li>1 pepino, finamente picado.</li>
+                        <li>1 pimiento, finamente picado.</li>
+                        <li>¼ taza de perejil.</li>
+                        <li>1 limón.</li>
+                        <li>1 cucharada de aceite de oliva.</li>
+                        <li>Sal pimienta.</li>
                     </ul>
 
                     <ol>
                         <h3>Modo de preparación:</h3>
-                        <li>En un tazón poner los huevos, la leche, la mostaza, el perejil y la sal. Revolver muy bien.
-                        </li>
-                        <li>En un sartén colocar la mantequilla, esperar a que se derrita un poco y verter la mezcla del
-                            huevo.</li>
-                        <li>Cocinar a fuego medio bajo por unos 7 minutos.</li>
-                        <li>Cortar la tortilla de huevo en triángulos.</li>
-                        <li>Esparcir un poco de mantequilla en el muffin y colocar el huevo dentro del sandwich.</li>
+                        <li>Coloca todos los ingredientes en un tazón y mezcla muy bien.</li>
+                        <li>Agrega el aceite de oliva, la sal y la pimienta para sazonar.</li>
+                        <li>Disfruta.</li>
 
                     </ol>
 
@@ -83,23 +79,21 @@
 
                 <div class="receta">
                     <!-- UNA RECETA!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-                    <h3 id="Wrap Dulce">Wrap Dulce</h3>
+                    <h3 id="Licuado de Mora Azul">Licuado de Mora Azul</h3>
                     <ul>
                         <h3>Ingredientes:</h3>
-                        <li>1 tortilla integral</li>
-                        <li>2 cdas mantequilla de almendra</li>
-                        <li>1/2 plátano</li>
-                        <li>3 fresas</li>
-                        <li>Pizca de canela</li>
-                        <li>Pizca de sal de mar</li>
+                        <li>1 plátano.</li>
+                        <li>½ taza de mora azul.</li>
+                        <li>2 cucharadas de linaza.</li>
+                        <li>1 cucharada de mantequilla de maní.</li>
+                        <li>1 cucharada de proteína de vainilla Organifi.</li>
+                        <li>1 taza de agua.</li>
 
                     </ul>
 
                     <ol>
                         <h3>Modo de preparación:</h3>
-                        <li>Sobre la tortilla, esparcir la mantequilla de almendra y colocar las rodajas de fruta.</li>
-                        <li>Doblar como burrito.</li>
-                        <li>Disfrutar!</li>
+                        <li>Coloca todos los ingredientes en una licuadora y mezcla muy bien hasta obtener una consistencia suave.</li>
 
                     </ol>
 
@@ -111,25 +105,32 @@
 
                 <div class="receta">
                     <!-- UNA RECETA!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-                    <h3 id="Pancakes de Plátano">Pancakes de Plátano</h3>
+                    <h3 id="Pan Tostado con Tahini y Verduras">Pan Tostado con Tahini y Verduras</h3>
                     <ul>
-                        <h3>Ingredientes:</h3>
-                        <li>1 plátano</li>
-                        <li>2 huevos</li>
-                        <li>Pizca de sal</li>
-                        <li>1 cda mantequilla</li>
-                        <li>Miel de maple, al gusto</li>
-                        <li>Pizca de canela</li>
+                        <h3>Ingredientes crema Tahini:</h3>
+                        <li>1 ½ cucharada de tahini.</li>
+                        <li>Jugo de ½ limón.</li>
+                        <li>Sal.</li>
+                        <li>Ajo en polvo, al gusto.</li>
+
+                    </ul>
+
+                    <ul>
+                        <h3>Ingredientes pan tostado:</h3>
+                        <li>¼ de pepino.</li>
+                        <li>¼ de pimiento.</li>
+                        <li>¼ de zanahoria.</li>
+                        <li>Una pizca de perejil ,finamente picado.</li>
+                        <li>Aceite de oliva, al gusto.</li>
+                        <li>1 rebanada de pan integral.</li>
 
                     </ul>
 
                     <ol>
                         <h3>Modo de preparación:</h3>
-                        <li>Machacar el plátano y mezclar con el huevo y sal.</li>
-                        <li>En un sartén colocar la mantequilla, esperar a que se derrita un poco y verter la mezcla.
-                        </li>
-                        <li>Voltear cada pancake para que se cocine de los dos lados.</li>
-                        <li>Terminar con miel de maple y canela. </li>
+                        <li>En un tazón mezcla el tahini, el jugo de limón, sal y el ajo en polvo para hacer la crema.</li>
+                        <li>Esparce la crema sobre una rebanada de pan tostado y agrega las verduras encima.</li>
+                        <li>Rocía con aceite de oliva.</li>
 
                     </ol>
 
@@ -141,24 +142,22 @@
 
                 <div class="receta">
                     <!-- UNA RECETA!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-                    <h3 id="Pudín de Chía">Pudín de Chía</h3>
+                    <h3 id="Sándwich de Huevo con Aguacate">Sándwich de Huevo con Aguacate</h3>
                     <ul>
                         <h3>Ingredientes:</h3>
-                        <li>1/4 taza semilla chia</li>
-                        <li>1 taza leche almendra (o la de tu preferencia)</li>
-                        <li>1 cda miel de abeja</li>
-                        <li>Pizca de canela</li>
-                        <li>Pizca de sal de mar</li>
-                        <li>Toppings: cualquier fruta que tu quieras</li>
-
+                        <li>2 huevos.</li>
+                        <li>1 aguacate.</li>
+                        <li>¼ taza de cebolla morada.</li>
+                        <li>Cilantro, finamente picado.</li>
+                        <li>Sal y pimienta.</li>
+                        <li>2 rebanadas de pan integral.</li>
                     </ul>
 
                     <ol>
                         <h3>Modo de preparación:</h3>
-                        <li>En un recipiente colocar la leche, las semillas de chia, miel y la canela. Revolver muy
-                            bien.</li>
-                        <li>Meter al refrigerador y dejar reposar al menos 1 hora.</li>
-
+                        <li>Hierve los huevos en agua durante 3 minutos y quita el cascarón.</li>
+                        <li>En un tazón machaca los huevos con el aguacate. Agrega el cilantro, la cebolla y sazona con sal y pimienta.</li>
+                        <li>Prepara el sándwich con el pan.</li>
                     </ol>
 
 
@@ -175,7 +174,7 @@
 
                 <h3 id="Video"> A continuación un vídeo explicativo para la preparación de las recetas.</h3>
 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/d-Yw97flmRA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/vkNnZA-BYLs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
 
 
@@ -191,10 +190,10 @@
         <aside>
             <!-- CAMBIAR LAS REF Y LOS NOMBRES!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
             <h2 id="indice_de_recetas">Lista de Recetas:</h2>
-            <a href="#Sandwich de Huevo">Ir a "Sandwich de Huevo"</a><br>
-            <a href="#Wrap Dulce">Ir a "Wrap Dulce"</a><br>
-            <a href="#Pancakes de Plátano">Ir a "Pancakes de Plátano"</a><br>
-            <a href="#Pudín de Chía">Ir a "Pudín de Chía"</a> <br>
+            <a href="#Ensalada de Atún y Garbanzo">Ir a Ensalada de Atún y Garbanzo</a><br>
+            <a href="#Licuado de Mora Azul">Ir a Licuado de Mora Azul</a><br>
+            <a href="#Pan Tostado con Tahini y Verduras">Ir a Pan Tostado con Tahini y Verduras</a><br>
+            <a href="#Sándwich de Huevo con Aguacate">Ir a Sándwich de Huevo con Aguacate</a> <br>
             <a href="#Video"> Video explicativo.</a> <br>
 
             <h2>
@@ -230,6 +229,7 @@
 
 
         <footer class="footer">
+           
 
         </footer>
 
