--- a/html_merienda.html
+++ b/html_merienda.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desayunos saludables.</title>
+    <title>Meriendas saludables.</title>
     <link rel="stylesheet" href="Css/CssGrid.css">
     <link rel="stylesheet" href="Css/style.css">
     <link rel="stylesheet" href="Css/Css_merienda.css">
@@ -31,7 +31,7 @@
         <main class="main">
 
             <!-- CAMBIAR EL NOMBRE DE LOS ALTS!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-            <h2>Desayunos saludables</h2>
+            <h2>Merienda saludables</h2>
 
             <div class="carousel">
 
