--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a href="html_almuerzo.html">
                             <img src="imagenes/Almuerzo.jpg" alt="Almuerzo">
                             <div class="overlay">
-                                <span>Almuezo</span>
+                                <span>Almuerzo</span>
                             </div>
                         </a>
                     </div>
