--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <header class="header">
             <h1>Vitalia</h1>
             <nav>
-                <a href="index.html">Inicio</a>
-                <a href="acerca.html">Acerca de</a>
-                <a href="contacto.html">Contacto</a>
+               
+                <a href="html_acerca_de.html">Acerca de</a>
+                <a href="html_contacto.html">Contacto</a>
             </nav>
         </header>
         <!-- Contenido -->
