--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <script>
                 $(document).ready(function() {
                     $.ajax({
-                        url: 'www.thecocktaildb.com/api/json/v1/1/random.php', // Reemplaza con la URL de la API que deseas utilizar
+                        url: 'https://www.thecocktaildb.com/api/json/v1/1/random.php', // Reemplaza con la URL de la API que deseas utilizar
                         method: 'GET',
                         success: function(response) {
                             // Manipula los datos recibidos de la API
