--- a/index.html
+++ b/index.html
@@ -76,23 +76,24 @@
         <!-- Pie de pág -->
         <footer class="footer">
             <!-- Contenido del pie de página -->
-            <div id="resultado-api"></div>
+            <h1>Receta Aleatoria</h1>
+            <div id="recipe-container">
+                <h2 id="recipe-name"></h2>
+                <p id="recipe-instructions"></p>
+            </div>
             <script>
-                $(document).ready(function () {
+                $(document).ready(function() {
                     $.ajax({
                         url: 'https://www.themealdb.com/api/json/v1/1/random.php',
                         method: 'GET',
-                        success: function (response) {
+                        success: function(response) {
                             var recipe = response.meals[0];
                             var recipeName = recipe.strMeal;
                             var recipeInstructions = recipe.strInstructions;
-
+                            
                             // Mostrar el nombre de la receta y las instrucciones en tu página web
                             $('#recipe-name').text(recipeName);
                             $('#recipe-instructions').text(recipeInstructions);
-                        },
-                        error: function (error) {
-                            console.log(error);
                         }
                     });
                 });
